In Particle Edit mode, hair becomes halos when using rendered viewport shading #38323

Closed
opened 2014-01-22 17:31:09 +01:00 by Sam Brubaker · 6 comments

Blender Version: 2.69 official release (Linux 32 bit and Windows 64 bit)

How to reproduce: Create hair particle system, switch mode in 3d view to "Particle Edit" and viewport shading to "Rendered". The hair is rendered as halos, and not strands. Problem persists even when solid material is applied to emitter.

ParticleEdit-ViewPort_Bug.blend

This seemed like a very conspicuous bug, but I couldn't find it in the search function. I apologize if this is a duplicate report.

Blender Version: 2.69 official release (Linux 32 bit and Windows 64 bit) How to reproduce: Create hair particle system, switch mode in 3d view to "Particle Edit" and viewport shading to "Rendered". The hair is rendered as halos, and not strands. Problem persists even when solid material is applied to emitter. [ParticleEdit-ViewPort_Bug.blend](https://archive.blender.org/developer/F72453/ParticleEdit-ViewPort_Bug.blend) This seemed like a very conspicuous bug, but I couldn't find it in the search function. I apologize if this is a duplicate report.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

This issue was referenced by blender/blender-addons-contrib@c2fbec7bf1

This issue was referenced by blender/blender-addons-contrib@c2fbec7bf1e0ec07f96f3f65a28a5afc1a71595d

This issue was referenced by c2fbec7bf1

This issue was referenced by c2fbec7bf1e0ec07f96f3f65a28a5afc1a71595d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c2fbec7bf1.

Closed by commit c2fbec7bf1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38323
No description provided.