Fix T38323: blender viewport render in particle hair edit mode renders halos.

Currently it's not supported to do viewport render of particles while in
particle edit mode, hide the particle instead of rendering halos.