source/blender/render/intern/source/convertblender.c
@@ -1351,6 +1351,9 @@ static int render_new_particle_system(Render *re, ObjectRen *obr, ParticleSystem
 	if (part->ren_as==PART_DRAW_OB || part->ren_as==PART_DRAW_GR || part->ren_as==PART_DRAW_NOT)
 		return 1;
 
+	if ((re->r.scemode & R_VIEWPORT_PREVIEW) && psys->edit)
+		return 0;
+
 /* 2. start initializing things */
 
 	/* last possibility to bail out! */
